# grav_potentials

./: LICENSE  README.md  potentials.py  setup.cfg  test.py  test_ell.py
potentials/: __init__.py  potentials.py
potentials/torus_plot/: torus_plot.py
test/: test_ell.py
torus_plot/: __init__.py  torus_plot.py
