[metadata]
name = potentials
version = 0.0.1
author = Orlov Ivan
author_email = 'iva4216@mail.ru'
description = Module of gravitational potentials of homogeneous figures
long_description = file: README.md
license = MIT
keywords = science, mechanics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    scipy>=1.0
    matplotlib>=2.0
    sympy>=1.6
    mpmath>=0.19
scripts =
    bin/scripts

[options.entry_points]
gui_scripts =
    plot_thor = torus_plot.torus_plot:main

[options.packages.find]
exclude = 
    test
